# positronic

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  FOUNDATIONAL_MODEL_FINETUNING.md  README.md  TESTING_STATUS_PROTOCOL.md  data_collection.py  data_collection_zen.py  geom.py  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-hardware.txt  requirements.txt  sync_policy_runner.py
.basedpyright/: baseline.json
.claude/: settings.json
adhoc/: validate_trajectory.py
cfg/: __init__.py  env.py  ui.py
configs/: policy_runner.yaml  to_lerobot.yaml
configuronic/: config.py
docker/: CONTEXTS.md  Dockerfile  Dockerfile.dreamzero  Dockerfile.robolab  Dockerfile.training  Makefile  build.sh  docker-compose.phail.desktop.yml  docker-compose.phail.notebook.yml  docker-compose.phail.openpi.yml  docker-compose.spoons-ablation.yml  docker-compose.yml  run-rt.sh  run.sh
docs/: AGENTS.md  CHANGELOG.md  agent_workflow_style.md  architecture.md  cli-vision.md  codecs.md  connect-your-model.md  data-collection.md  eval-timing.md  evaluation.md  inference.md  model-selection.md  nebius-s3-checkpoint-failures.md  phail-eval-mvp.md  reproduce-gr00t-public-training.md  training-workflow.md
drivers/: from_config.py
geom/: __init__.py  trajectory.py
inference/: action.py  inference.py  policy.py
ironic/: __init__.py  config.py  utils.py
ironic2/: __init__.py  core.py  shared_memory.py  utils.py  world.py
patches/: positronic-lerobot.patch
pimm/: __init__.py  core.py  data_collection.py  data_collection_umi.py  inference.py  replay_record.py  robot_controller.py  run_inference.py  teleop.py  utils.py  world.py
positronic/: cli.py  data_collection.py  data_collection_umi.py  data_collection_zen.py  embodiment.py  eval.py  (+13 more)
(+387 files in other folders)
