[project]
name = "positronic"
version = "0.1.0"
description = "Positronic robotics project"
requires-python = "~=3.11"
dependencies = [
    "numpy",
    "opencv-python",
    "torch",
    "requests",
    "scipy",
    "uvicorn[standard]",
    "click",
    "cmake-build-extension",
    "dearpygui",
    "fire",
    "hydra-colorlog",
    "hydra-core",
    "numpy-quaternion>=2024.0",
    "pytest",
    "pytest-asyncio",
    "websockets",
    "yappi",
    "dm_control",
    "pyspacemouse",
    "pyturbojpeg @ git+https://github.com/lilohuang/PyTurboJPEG.git@v1.7.8",
    "linuxpy",
    "imageio",
    "rerun-sdk",
    "matplotlib",
    "av",
]

[project.optional-dependencies]
hardware = [
    "pyaudio",
    "pymodbus"
]
dev = [
    "jupyter",
    "ipython"
]

[tool.pytest.ini_options]
testpaths = [
    "*/tests",
]
python_files = ["test_*.py", "*_test.py"]
